--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rec"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
 description = "Quick speech-to-text for devs"
 
@@ -16,4 +16,7 @@ hound = "3.5.1"
 reqwest = { version = "0.12.26", features = ["multipart", "json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+dirs = "5"
+chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
